--- a/src/minyuef/tester.ipynb
+++ b/src/minyuef/tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,13 +86,14 @@
     "    print('get_data_queues: labelList[:5] =', labelFList[:5])\n",
     "\n",
     "\n",
-    "    ds = tf.data.Dataset.from_tensor_slices((all_image_paths, all_image_labels))\n",
+    "    ds = tf.data.Dataset.from_tensor_slices((featureFList, labelFList))\n",
+    "    \n",
     "    return ds "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,14 +127,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get_data_queues: num_epochs = 1 <class 'int'>\n",
+      "get_data_queues: len(featureFList) = 2\n",
+      "get_data_queues: featureList[:5] = ['test/block_rotBallSamp_4137447.doubles', 'test/block_rotBallSamp_3913814.doubles']\n",
+      "get_data_queues: labelList[:5] = ['test/block_rotEdgeSamp_4137447.doubles', 'test/block_rotEdgeSamp_3913814.doubles']\n",
+      "WARNING:tensorflow:From <ipython-input-10-ae7df2a9efc8>:8: to_float (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n",
+      "WARNING:tensorflow:From /Users/momonishikyo/Library/Python/3.7/lib/python/site-packages/tensorflow/python/ops/control_flow_ops.py:423: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
+      "read_pair_of_files: fVals, lVals = Tensor(\"featureToFloat:0\", shape=(71709,), dtype=float32) Tensor(\"Reshape_1:0\", shape=(49, 97), dtype=float32)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<DatasetV1Adapter shapes: ((71709,), (49, 97)), types: (tf.float32, tf.float32)>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ds = get_data_queues(train_dir, shuffle= True, num_epochs=num_epochs,num_expected_examples=num_expected_examples)\n",
+    "ds = get_data_pairs(train_dir, shuffle= True, num_epochs=num_epochs,num_expected_examples=num_expected_examples)\n",
     "image_label_ds = ds.map(load_and_preprocess_image)\n",
     "image_label_ds"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
