Fixed some problems with merge_blocks for asymmetrical volumes

--- a/src/joel/merge_blocks.ipynb
+++ b/src/joel/merge_blocks.ipynb
@@ -20,7 +20,7 @@
    "outputs": [],
    "source": [
     "def writeBOV(fname_base, byte_blk, var_name):\n",
-    "    byte_blk.tofile(fname_base+'.bytes')\n",
+    "    reorder_array(byte_blk).tofile(fname_base+'.bytes')\n",
     "    scan_sz = byte_blk.shape\n",
     "    with open(fname_base + '.bov', 'w') as f:\n",
     "        f.write(\"TIME: 0\\n\")\n",
@@ -82,6 +82,7 @@
     "                           dtype=np.uint8).reshape(*self.shape)\n",
     "        \n",
     "        self.data = reorder_array(data)\n",
+    "        #self.data = data\n",
     "                    \n",
     "    def __repr__(self):\n",
     "        return \"BlockData<{}({}, {})>\".format(self.var, str(self.offset), str(self.shape))"
@@ -93,8 +94,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predNameL = glob.glob('/tmp/mastercube*pred*.bov')\n",
-    "scannedNameL = glob.glob('/tmp/mastercube*scanned*.bov')\n"
+    "predNameL = glob.glob('/home/welling/sshfshook/mastercube*pred*.bov')\n",
+    "scannedNameL = glob.glob('/home/welling/sshfshook/mastercube*scanned*.bov')\n"
    ]
   },
   {
@@ -120,12 +121,17 @@
     "        llcV = np.minimum(llcV, blk.offset)\n",
     "        trbV = np.maximum(trbV, blk.offset + blk.shape)\n",
     "    shape_sz_V = trbV - llcV\n",
+    "    #print('llc: ',llcV)\n",
+    "    #print('trb: ',trbV)\n",
+    "    #print('shape_sz_V', shape_sz_V)\n",
     "    space = np.zeros(shape_sz_V, dtype=np.uint8)\n",
     "    for blk in blks:\n",
     "        local_llcV = blk.offset - llcV\n",
+    "        #print('offset: ',blk.offset, 'local_llcV: ', local_llcV)\n",
     "        local_trbV = local_llcV + blk.shape\n",
     "        space[local_llcV[0]:local_trbV[0], local_llcV[1]:local_trbV[1], local_llcV[2]:local_trbV[2]] = blk.data\n",
-    "    return reorder_array(space)"
+    "    return space\n",
+    "    "
    ]
   },
   {
