Picking up left-over mods from a work branch

--- a/src/joel/calc_test_data.ipynb
+++ b/src/joel/calc_test_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,12 +15,14 @@
     "from brainroller.traceneighbors import UsefulVtx\n",
     "from brainroller.writegeom import writeVtkPolypoints\n",
     "from cnn.constants import RAD_PIXELS\n",
-    "import spilltree3D"
+    "import spilltree3D\n",
+    "import pandas as pd\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,77 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class UsefulVtx in module brainroller.traceneighbors:\n",
-      "\n",
-      "class UsefulVtx(Vtx)\n",
-      " |  UsefulVtx(vId, objId, parent, x, y, z, nbrCt=0)\n",
-      " |  \n",
-      " |  Method resolution order:\n",
-      " |      UsefulVtx\n",
-      " |      Vtx\n",
-      " |      builtins.object\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __init__(self, vId, objId, parent, x, y, z, nbrCt=0)\n",
-      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
-      " |  \n",
-      " |  addEdge(self, xyzTuple)\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Class methods defined here:\n",
-      " |  \n",
-      " |  fromVtx(vtx, nbrCt) from builtins.type\n",
-      " |  \n",
-      " |  load(pklF, maxSlice, skipF) from builtins.type\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Methods inherited from Vtx:\n",
-      " |  \n",
-      " |  addChild(self, vtxId)\n",
-      " |  \n",
-      " |  copyNoKids(self)\n",
-      " |  \n",
-      " |  getLoc(self)\n",
-      " |      For the benefit of the Spilltree module, which expects points to have\n",
-      " |      a getLoc method.\n",
-      " |  \n",
-      " |  setSkipTable(self, tbl)\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Data descriptors inherited from Vtx:\n",
-      " |  \n",
-      " |  __dict__\n",
-      " |      dictionary for instance variables (if defined)\n",
-      " |  \n",
-      " |  __weakref__\n",
-      " |      list of weak references to the object (if defined)\n",
-      " |  \n",
-      " |  realCoords\n",
-      " |  \n",
-      " |  x\n",
-      " |  \n",
-      " |  y\n",
-      " |  \n",
-      " |  z\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help(UsefulVtx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,6 +139,7 @@
     "        with open(os.path.join(root_dir, fish_cube_dir, 'block_41_%d.yaml' % sample_id)) as f:\n",
     "            infoD = yaml.safe_load(f)\n",
     "    ctrCoords = np.asarray(infoD['realCoords'])\n",
+    "    print('ctrCoords: ', ctrCoords)\n",
     "    offsetV = np.asarray([int(np.floor(v)) for v in [fishCoreXOffset, fishCoreYOffset, fishCoreZOffset]])\n",
     "    scanCoords = (ctrCoords - offsetV) - np.floor(0.5 * scan_sz_V)\n",
     "\n",
@@ -229,26 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "offset_V:  [4238 1638 4000]\n",
-      "corrected offset_V:  [4238 1638 6500]\n",
-      "real_start_V:  [4622 2022 6532]\n",
-      "llfCoords:  [4622 2022 6532]\n",
-      "trbCoords:  [4878 2278 6660]\n",
-      "offsetV:  [4238 1638 6500]\n",
-      "lclV: [512. 512.  96.]\n",
-      "including 6536 points\n",
-      "shift1:  [-4750.0, -2150.0, -6596.0]\n",
-      "shift2:  [128.0, 128.0, 64.0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def write_blk_verts_vtk(fname, llfCoords, trbCoords, usefulVtxDict, offsetV):   \n",
     "    lclV = 0.5*(trbCoords + llfCoords) - offsetV\n",
@@ -290,33 +215,29 @@
     "                        real_start_V, real_start_V + scan_sz_V, usefulVtxDict,\n",
     "                        offset_V)\n",
     "\n",
-    "test_blk_calcs(2621440000, (384,384,32), (256,256,128))"
+    "test_blk_calcs(2621440000, (384,384,32), (448,320, 128))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home/welling/sshfshook/fish_cube_links/block_41_1010391.yaml'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-f2fa1cb81b23>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_calcs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1010391\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m#test_calcs(994, empty=True)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#test_calcs(983792)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#test_calcs(2453393)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-9-f4faf0211d36>\u001b[0m in \u001b[0;36mtest_calcs\u001b[0;34m(sample_id, empty)\u001b[0m\n\u001b[1;32m     31\u001b[0m             \u001b[0minfoD\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myaml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msafe_load\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroot_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfish_cube_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'block_41_%d.yaml'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0msample_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m             \u001b[0minfoD\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0myaml\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msafe_load\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m     \u001b[0mctrCoords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minfoD\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'realCoords'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/welling/sshfshook/fish_cube_links/block_41_1010391.yaml'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test_calcs(1010391)\n",
+    "test_calcs(4901045)\n",
     "#test_calcs(994, empty=True)\n",
     "#test_calcs(983792)\n",
     "#test_calcs(2453393)\n",
     "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_blk_calcs()"
    ]
   },
   {
@@ -342,6 +263,131 @@
    "outputs": [],
    "source": [
     "help(UsefulVtx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write_all_verts_vtk('/tmp/junk/try.vtk', None, [4871.0, 2174.5,4158.0], usefulVtxDict, spT, scan_sz_V, [4238, 1638, 6500])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "\n",
+    "observedCoords=[249,152.5, 126]\n",
+    "vtxId=4901045\n",
+    "realCoords=[4870.76, 2189.5, 6658.0]\n",
+    "\n",
+    "\n",
+    "offset_V:  [4238 1638 4000]\n",
+    "corrected offset_V:  [4238 1638 6500]\n",
+    "real_start_V:  [4622 2022 6532]\n",
+    "llfCoords:  [4622 2022 6532]\n",
+    "trbCoords:  [5070 2342 6660]\n",
+    "offsetV:  [4238 1638 6500]\n",
+    "lclV: [608. 544.  96.]\n",
+    "including 8672 points\n",
+    "shift1:  [-4846.0, -2182.0, -6596.0]\n",
+    "shift2:  [224.0, 160.0, 64.0]\n",
+    "    \n",
+    "    blockGen = BlockGenerator(rMax, edgeLen, maxL, \n",
+    "                              fakeVtxDict, fishCoreFile,\n",
+    "                              fishCoreXSize, fishCoreYSize, fishCoreZSize,\n",
+    "                              baseName=baseName)\n",
+    "\n",
+    "                blockGen.writeBlock(sampleId, \n",
+    "                                    {'xOffset': fishCoreXOffset,\n",
+    "                                     'yOffset': fishCoreYOffset,\n",
+    "                                     'zOffset': fishCoreZOffset})\n",
+    "\n",
+    "        self.sampler = ArraySampler(edgeLen, fishCoreFile,\n",
+    "                                    fishCoreXSize, fishCoreYSize,\n",
+    "                                    fishCoreZSize)\n",
+    "\n",
+    "        grabBlock(sampleVtx, self.usefulVtxDict, self.sampler,\n",
+    "                  self.transformer, self.rMax, self.edgeLen,\n",
+    "                  self.maxL, sampLocInfo['xOffset'],\n",
+    "                  sampLocInfo['yOffset'], sampLocInfo['zOffset'],\n",
+    "                  baseName=self.baseName)\n",
+    "\n",
+    "    xLoc = sampleVtx.x\n",
+    "    yLoc = sampleVtx.y\n",
+    "    zLoc = sampleVtx.z\n",
+    "    dCube = sampler.sample({'xLoc': xLoc, 'yLoc': yLoc, 'zLoc': zLoc,\n",
+    "                            'xOffset': xOffset, \n",
+    "                            'yOffset': yOffset,\n",
+    "                            'zOffset': zOffset})\n",
+    "    writeBOV(bovBaseName, dCube, 1.0, 1.0, 1.0, sig=(1.0, -1.0, 1.0))\n",
+    "\n",
+    "    if sig[0] < 0:\n",
+    "        data = data[::-1, :, :]\n",
+    "    if sig[1] < 0:\n",
+    "        data = data[:, ::-1, :]\n",
+    "    if sig[2] < 0:\n",
+    "        data = data[:, :, ::-1]\n",
+    "    np.ravel(data, order='F').tofile(fnameRoot + ext)\n",
+    "\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def backCalc(observedCoords):\n",
+    "    oX, oY, oZ = observedCoords\n",
+    "    scanStart, scanSz = (384,384,32), (448,320, 128)\n",
+    "    offset_V = [4238, 1638, 6500] # corrected\n",
+    "    real_start_V =  [4622, 2022, 6532]\n",
+    "    llfCoords =  [4622, 2022, 6532]\n",
+    "    trbCoords = [5070, 2342, 6660]\n",
+    "    offsetV = [4238, 1638, 6500]\n",
+    "    \n",
+    "    gblX = oX + llfCoords[0]\n",
+    "    gblY = (scanSz[1] - oY) + llfCoords[1]\n",
+    "    gblZ = oZ + llfCoords[2]\n",
+    "    return (gblX, gblY, gblZ)\n",
+    "\n",
+    "    #lclV: [608. 544.  96.]\n",
+    "    #including 8672 points\n",
+    "    #shift1:  [-4846.0, -2182.0, -6596.0]\n",
+    "    #shift2:  [224.0, 160.0, 64.0]\n",
+    "    \n",
+    "observedCoords=[249,152.5, 126]\n",
+    "vtxId=4901045\n",
+    "realCoords=[4870.76, 2189.5, 6658.0]\n",
+    "print(backCalc(observedCoords))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "errantDF = pd.read_csv('errant_empty_points.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "errantGlobalCoordL = []\n",
+    "for idx, rec in errantDF.iterrows():\n",
+    "    errantGlobalCoordL.append(backCalc((rec.x, rec.y, rec.z)))\n",
+    "with open('errant_empty_locs.pkl', 'wb') as f:\n",
+    "    pickle.dump(errantGlobalCoordL, f)"
    ]
   },
   {
