--- a/src/joel/merge_blocks.ipynb
+++ b/src/joel/merge_blocks.ipynb
@@ -94,8 +94,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predNameL = glob.glob('/home/welling/sshfshook/mastercube*pred*.bov')\n",
-    "scannedNameL = glob.glob('/home/welling/sshfshook/mastercube*scanned*.bov')\n"
+    "predNameL = glob.glob('/home/welling/sshfshook2/mastercube*pred*.bov')\n",
+    "scannedNameL = glob.glob('/home/welling/sshfshook2/mastercube*scanned*.bov')\n"
    ]
   },
   {
@@ -121,9 +121,9 @@
     "        llcV = np.minimum(llcV, blk.offset)\n",
     "        trbV = np.maximum(trbV, blk.offset + blk.shape)\n",
     "    shape_sz_V = trbV - llcV\n",
-    "    #print('llc: ',llcV)\n",
-    "    #print('trb: ',trbV)\n",
-    "    #print('shape_sz_V', shape_sz_V)\n",
+    "    print('llc: ',llcV)\n",
+    "    print('trb: ',trbV)\n",
+    "    print('shape_sz_V', shape_sz_V)\n",
     "    space = np.zeros(shape_sz_V, dtype=np.uint8)\n",
     "    for blk in blks:\n",
     "        local_llcV = blk.offset - llcV\n",
